feat: call Naver BookSearch Api

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+NAVER_CLIENT_ID="JYIQvqwEvxe7iSBVQvyN"
+NAVER_CLIENT_SECRET="vL9_emLSP1"
+BASE_URL="https://openapi.naver.com/v1/"
