--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -14,6 +16,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String","NAVER_CLIENT_ID", NAVER_CLIENT_ID)
+        buildConfigField("String","NAVER_CLIENT_SECRET", NAVER_CLIENT_SECRET)
+        buildConfigField("String","BASE_URL", BASE_URL)
+    }
+
+    viewBinding{
+        enabled = true
     }
 
     buildTypes {
@@ -32,12 +42,30 @@ android {
 }
 
 def nav_version = "2.4.0"
+def retrofit_version = "2.9.0"
+def rxjava_version = "3.1.3"
+def rx_version = "3.0.0"
 
 dependencies {
+
+    //hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     //Jetpack Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
+
+    //RxJava
+    implementation "io.reactivex.rxjava3:rxandroid:${rx_version}"
+    implementation "io.reactivex.rxjava3:rxjava:${rxjava_version}"
+    implementation "io.reactivex.rxjava3:rxkotlin:${rx_version}"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
