--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ android {
     viewBinding{
         enabled = true
     }
+    dataBinding{
+        enabled = true
+    }
 
     buildTypes {
         release {
@@ -45,10 +48,14 @@ def nav_version = "2.4.0"
 def retrofit_version = "2.9.0"
 def rxjava_version = "3.1.3"
 def rx_version = "3.0.0"
-
+def glide_version = '4.12.0'
 dependencies {
 
-    //hilt
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+
+    //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
