--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ def rx_version = "3.0.0"
 def glide_version = '4.12.0'
 dependencies {
 
+    //CardView
+    implementation "androidx.cardview:cardview:1.0.0"
+
     //Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
