--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
 }
 
@@ -49,7 +50,15 @@ def retrofit_version = "2.9.0"
 def rxjava_version = "3.1.3"
 def rx_version = "3.0.0"
 def glide_version = '4.12.0'
+def room_version = "2.3.0"
 dependencies {
+
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-rxjava3:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     //CardView
     implementation "androidx.cardview:cardview:1.0.0"
