--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,13 @@ def rxjava_version = "3.1.3"
 def rx_version = "3.0.0"
 def glide_version = '4.12.0'
 def room_version = "2.3.0"
+def lottie_version = "4.1.0"
 dependencies {
 
-    //room
+    //LottieAnimationView
+    implementation "com.airbnb.android:lottie:$lottie_version"
+
+    //Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava3:$room_version"
