--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,11 @@ def rx_version = "3.0.0"
 def glide_version = '4.12.0'
 def room_version = "2.3.0"
 def lottie_version = "4.1.0"
+def swipe_refresh_layout_version = "1.1.0"
 dependencies {
+
+    //SwipeRefreshLayout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_layout_version"
 
     //LottieAnimationView
     implementation "com.airbnb.android:lottie:$lottie_version"
