--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,12 @@ def room_version = "2.3.0"
 def lottie_version = "4.1.0"
 def desugar_version = "1.1.5"
 def swipe_refresh_layout_version = "1.1.0"
+def paging_version = "3.1.0"
+
 dependencies {
+
+    //Paging
+    implementation "androidx.paging:paging-runtime:$paging_version"
 
     //desugar
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugar_version}"
