--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -58,8 +59,12 @@ def desugar_version = "1.1.5"
 def swipe_refresh_layout_version = "1.1.0"
 def paging_version = "3.1.0"
 def okhttp_version = "4.6.0"
-
+def firebase_bom_version = "29.1.0"
 dependencies {
+
+    //Firebase
+    implementation platform("com.google.firebase:firebase-bom:${firebase_bom_version}")
+    implementation 'com.google.firebase:firebase-analytics'
 
     //Paging
     implementation "androidx.paging:paging-runtime:$paging_version"
