--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,11 +60,13 @@ def swipe_refresh_layout_version = "1.1.0"
 def paging_version = "3.1.0"
 def okhttp_version = "4.6.0"
 def firebase_bom_version = "29.1.0"
+def firebase_auth_version = "20.0.4"
 dependencies {
 
     //Firebase
     implementation platform("com.google.firebase:firebase-bom:${firebase_bom_version}")
     implementation 'com.google.firebase:firebase-analytics'
+    implementation "com.google.firebase:firebase-auth-ktx:${firebase_auth_version}"
 
     //Paging
     implementation "androidx.paging:paging-runtime:$paging_version"
