--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,11 @@ def paging_version = "3.1.0"
 def okhttp_version = "4.6.0"
 def firebase_bom_version = "29.1.0"
 def firebase_auth_version = "20.0.4"
+def facebooklogin_version = "[8,9)"
 dependencies {
+
+    //Facebook
+    implementation "com.facebook.android:facebook-login:${facebooklogin_version}"
 
     //Firebase
     implementation platform("com.google.firebase:firebase-bom:${firebase_bom_version}")
