design: redesign all

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ def swipe_refresh_layout_version = "1.1.0"
 def paging_version = "3.1.0"
 def okhttp_version = "4.6.0"
 def firebase_bom_version = "29.1.0"
+def firebase_db_version = "20.0.3"
 def firebase_auth_version = "20.0.4"
 def facebooklogin_version = "[8,9)"
 dependencies {
@@ -71,6 +72,7 @@ dependencies {
     implementation platform("com.google.firebase:firebase-bom:${firebase_bom_version}")
     implementation 'com.google.firebase:firebase-analytics'
     implementation "com.google.firebase:firebase-auth-ktx:${firebase_auth_version}"
+    implementation "com.google.firebase:firebase-database-ktx:${firebase_db_version}"
 
     //Paging
     implementation "androidx.paging:paging-runtime:$paging_version"
