--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,10 +63,11 @@ def firebase_bom_version = "29.1.0"
 def firebase_db_version = "20.0.3"
 def firebase_auth_version = "20.0.4"
 def facebooklogin_version = "[8,9)"
+def kotpref_version = "2.13.1"
 dependencies {
 
-    implementation 'androidx.work:work-runtime-ktx:2.7.0'
-
+    // KotPref
+    implementation "com.chibatching.kotpref:kotpref:${kotpref_version}"
 
     //Facebook
     implementation "com.facebook.android:facebook-login:${facebooklogin_version}"
