--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ def desugar_version = "1.1.5"
 def swipe_refresh_layout_version = "1.1.0"
 def paging_version = "3.1.0"
 def okhttp_version = "4.6.0"
+def read_more_textview_version = '1.0.0'
 def firebase_bom_version = "29.1.0"
 def firebase_db_version = "20.0.3"
 def firebase_auth_version = "20.0.4"
@@ -99,6 +100,9 @@ dependencies {
 
     //CardView
     implementation "androidx.cardview:cardview:1.0.0"
+
+    //ReadMoreTextview
+    implementation "kr.co.prnd:readmore-textview:$read_more_textview_version"
 
     //Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
